--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
   "name": "ShufflePaper",
-  "version": "0.9.0",
+  "short_name": "ShufflePaper",
+  "version": "0.9.2",
   "description": "Choose a folder and have your Chromebook automatically shuffle through the wallpapers in it!",
   "minimum_chrome_version": "38",
-
   "icons": {
     "16":   "assets/ic_launcher_16.png",
     "48":   "assets/ic_launcher_48.png",
@@ -12,13 +12,11 @@
     "512":  "assets/ic_launcher_512.png"
   },
   "permissions": [
-    "notifications",
     "wallpaper",
     "alarms",
     "storage",
     {
       "fileSystem": [
-        "write", 
         "retainEntries",
         "directory"
       ]
