--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,10 @@
   "manifest_version": 2,
   "name": "ShufflePaper",
   "short_name": "ShufflePaper",
-  "version": "0.9.2",
+  "version": "1.0.0",
   "description": "Choose a folder and have your Chromebook automatically shuffle through the wallpapers in it!",
   "minimum_chrome_version": "38",
+  "default_locale": "en",
   "icons": {
     "16":   "assets/ic_launcher_16.png",
     "48":   "assets/ic_launcher_48.png",
@@ -14,6 +15,7 @@
   "permissions": [
     "wallpaper",
     "alarms",
+    "clipboardWrite",
     "storage",
     {
       "fileSystem": [
@@ -26,11 +28,21 @@
     "background": {
       "scripts": [
         "js/Helper.js",
-        "js/KeyConstants.js",
+        "js/Constants.js",
         "js/SharedPreferences.js",
         "js/WallpaperManager.js",
         "js/BackgroundService.js"
       ]
+    }
+  },
+  "commands": {
+    "cmdNew": {
+        "suggested_key": {
+          "default": "Ctrl+Shift+1",
+          "chromeos": "Search+W"
+        },
+        "global": true,
+        "description": "Create new window"
     }
   },
   "offline_enabled": true
