--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 2,
     "name": "__MSG_app_name__",
-    "version": "2.0.0",
+    "short_name": "__MSG_app_short_name__",
     "description": "__MSG_app_description__",
+    "version": "2.0.0",
     "minimum_chrome_version": "38",
     "default_locale": "en",
     "icons": {
